# AI-Digest

./: .env.example  README.md  pyproject.toml  setup.bat  setup.sh
resources/: config.yml
src/cli/: run.py
src/core/: entities.py  personas.py  schemas.py  scoring.py
src/delivery/: base.py  email_delivery.py  file_delivery.py  telegram_delivery.py
src/gui/: README.md  app.py  config_service.py  email_service.py  models.py  multi_user_delivery.py  run_gui.py  tasks.py
src/gui/static/css/: styles.css
src/gui/static/js/: app.js
src/gui/templates/: base.html  dashboard.html  forgot_password.html  index.html  login.html  personas.html  profile.html  register.html  reset_password.html  verify_otp.html
src/gui/templates/admin/: config.html  dashboard.html  edit_pipeline.html  pipelines.html  run_digest.html  users.html
src/gui/templates/errors/: 404.html  500.html
src/ingestion/: base.py  hackernews.py  producthunt.py  reddit.py  rss.py  source_factory.py  subreddit.py
src/processing/: clustering.py  deduplicator.py  evaluator.py  prefilter.py  summarizer.py
src/services/: config.py  database.py  digest_tracker.py  llm.py  logging.py  scheduler.py  vector_store.py
src/workflows/: __init__.py  base.py  genai_news.py  pipeline_factory.py  product_ideas.py
